--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -6,8 +6,8 @@
     <title>app</title>
 </head>
 <body>
-<div id="app"></div>
-<script src="./src/main.js" type="module"></script>
+<div id="root"></div>
+<script src="./src/main.jsx" type="module"></script>
 </body>
 </html>
 
